--- a/src/Component/Content/index.css
+++ b/src/Component/Content/index.css
@@ -1,12 +1,59 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 .content {
   width: 100vw;
   height: 100vh;
-  background-image: url(../../Images/Night-bgc.jpg);
+  /* background-image: url(../../Images/Night-bgc.jpg); */
   background-repeat: no-repeat;
   background-size: cover;
   overflow: hidden;
 }
 
-.text {
-  margin-top: 20vw;
+.container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  margin-top: 35vw;
+}
+
+p {
+  font-size: 5vw;
+  color: white
+}
+
+h1 {
+  margin-top: 10vw;
+  font-size: 22vw;
+  color: white
+}
+
+.top {
+  margin: 0 5vw;
+}
+
+.description {
+  float: right;
+  transform: rotate(270deg);
+}
+
+.bottom {
+  display: flex;
+  position: absolute;
+  bottom: 50vw;
+  left: 6vw;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1vw;
+  width: 88vw;
+  height: 20vw;
+  background-color: rgba(255, 255, 255, 0.2);
+  border-radius: 5vw;
+}
+
+.bottom div {
+  width: 26vw;
+  text-align: center;
 }
